SAK-13008 Update maven-javadoc-plugin settings to better handle memory management.
git-svn-id: https://source.sakaiproject.org/svn/master/trunk@41273 66ffb92e-73f9-0310-93c1-f5514f145a0a