@@ -959,7 +959,11 @@ This is not needed now that pluto have been released
                   <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
                </links>
                <breakiterator>true</breakiterator>
-               <verbose>true</verbose>
+               <verbose>false</verbose>
+               <aggregate>true</aggregate>
+               <maxmemory>512m</maxmemory>
+               <additionalJOption>-J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
+               <version>2.3</version>
             </configuration>
          </plugin>
          <plugin>
